--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,5 +1,5 @@
 spring.datasource.url=jdbc:mysql://localhost/tuvannganhhoc
-spring.jpa.hibernate.ddl-auto=create
+spring.jpa.hibernate.ddl-auto=update
 spring.datasource.username=root
 spring.datasource.password=123456
 spring.datasource.driver-class-name =com.mysql.cj.jdbc.Driver
